--- a/templates/javascripts.html
+++ b/templates/javascripts.html
@@ -33,4 +33,7 @@
 <script type="text/javascript" src="{% static 'javascripts/posts/directives/posts.directive.js' %}"></script>
 <script type="text/javascript" src="{% static 'javascripts/posts/controllers/posts.controller.js' %}"></script>
 <script type="text/javascript" src="{% static 'javascripts/posts/controllers/new-post.controller.js' %}"></script>
+<script type="text/javascript" src="{% static 'javascripts/profiles/profiles.module.js' %}"></script>
+<script type="text/javascript" src="{% static 'javascripts/profiles/services/profile.service.js' %}"></script>
+<script type="text/javascript" src="{% static 'javascripts/profiles/controllers/profile.controller.js' %}"></script>
 {% endcompress %}
